crates/aranya-policy-lang/tests/data/command_without_seal_block.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 3 column 5:  --> 3:5
  |
3 |     policy {
  |     ^---
  |
  = expected seal_block
